--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fin-hypergrid-client-module-maker",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Provides a header and a footer for wrapping Hypergrid Client Modules",
   "main": "index.js",
   "scripts": {
@@ -16,7 +16,7 @@
     "url": "https://github.com/fin-hypergrid/client-module-maker/issues"
   },
   "homepage": "https://github.com/fin-hypergrid/client-module-maker#readme",
-  "devDependencies": {
+  "dependencies": {
     "fin-hypergrid-client-module-wrapper": "^1.0.0",
     "footer": "^1.0.0",
     "gulp-eslint": "^4.0.0",
