--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fin-hypergrid-client-module-maker",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Provides a header and a footer for wrapping Hypergrid Client Modules",
   "main": "index.js",
   "scripts": {
@@ -24,10 +24,12 @@
     "gulp-header": "^1.8.9",
     "gulp-load-plugins": "^1.5.0",
     "gulp-mirror": "^1.0.0",
+    "gulp-mocha": "^4.3.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.6.1",
     "gulp-uglify": "^3.0.0",
     "multipipe": "^2.0.1",
+    "run-sequence": "^2.2.0",
     "util": "^0.10.3"
   }
 }
