--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fin-hypergrid-client-module-maker",
-  "version": "2.1.0",
+  "version": "2.3.0",
   "description": "Provides a header and a footer for wrapping Hypergrid Client Modules",
   "main": "index.js",
   "scripts": {
@@ -17,19 +17,6 @@
   },
   "homepage": "https://github.com/fin-hypergrid/client-module-maker#readme",
   "dependencies": {
-    "fin-hypergrid-client-module-wrapper": "^1.2.0",
-    "footer": "^1.0.0",
-    "gulp-eslint": "^4.0.0",
-    "gulp-footer": "^1.0.5",
-    "gulp-header": "^1.8.9",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-mirror": "^1.0.0",
-    "gulp-mocha": "^4.3.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.6.1",
-    "gulp-uglify": "^3.0.0",
-    "multipipe": "^2.0.1",
-    "run-sequence": "^2.2.0",
-    "util": "^0.10.3"
+    "fin-hypergrid-client-module-wrapper": "^2.0.0"
   }
 }
